--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   permission_handler: ^12.0.1
   upgrader: ^11.4.0
   loader_overlay: ^5.0.0
+  flutter_spinkit: ^5.2.2
 
 flutter_icons:
   android: true
